--- a/index.html
+++ b/index.html
@@ -1,34 +1,63 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">  
-    		<meta name="viewport" content="width=device-width, initial-scale=1">    
-    		<meta name="description" content="Millora físicament i mental">    
-    		<title>   
-        		Bodycards
-    		</title>
-		<link rel="stylesheet" href="index.css">
-	</head>
-	<body>
-	<div id="superior">    
-        	Bodycards
-    	</div>
-    	<div id="seccio_1" class="seccio">   
-        	Millora físicament i mental
-    	</div>
-	<div id="seccio_2" class="seccio">   
-        	Triar la teva carta
-    	</div>
-	<div id="seccio_3" class="seccio">   
-        	Triar els teus exercicis preferits
-    	</div>
-	<div id="seccio_4" class="seccio">   
-        	Triar l'idioma
-    	</div>
-    	<div id="menu">   
-    	</div>
-	</body>
+    <head>
+        <meta charset="UTF-8">  
+            <meta name="viewport" content="width=device-width, initial-scale=1">    
+            <meta name="description" content="cuidat,relaxat">    
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/fontawesome.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/solid.min.css">
+            <title>   
+                Bodycards
+            </title>
+        <link rel="stylesheet" href="index.css">
+    </head>
+    <body>
+    <div id="superior">    
+            Bodycards
+        </div>
+      <div id="seccio_0" class="seccio">
+      <div>
+        Inici de sessió    <!-- títol de la secció -->
+      </div> 
+      <div id="credencials">    <!-- contenidor per als quadres de text -->
+        <div>
+          <label for="nom_usuari">Nom d'usuari</label>
+          <input type="text" id="nom_usuari">
+        </div>
+        <div>
+          <label for="contrasenya">Contrasenya</label>        
+          <input type="password" id="contrasenya">
+        </div>
+      </div>
+      <div id="botons_sessio">    <!-- contenidor per als botons -->
+        <button>Inicia sessió</button>
+        <button>Nou usuari</button>
+      </div>         
+    </div>
+	  <div id="seccio_1" class="seccio">   
+            TU POTS SER EL QUE VOLS
+        </div>
+    <div id="seccio_2" class="seccio">   
+            tornat mes fort
+        </div>
+    <div id="seccio_3" class="seccio">   
+            Triar els teus exercicis
+        </div>
+    <div id="seccio_4" class="seccio">   
+            Triar l'idioma
+        </div>
+        <div id="menu"> 
+            <i id="boto_1" class="fa-solid fa-house"></i>        
+            <i id="boto_2" class="fa-solid fa-camera"></i>    
+            <i id="boto_3" class="fa-solid fa-image"></i>     
+            <i id="boto_4" class="fa-solid fa-map"></i>    
+            <i class="fa-solid fa-right-from-bracket"></i>    
+        </div>
+    </body>
 </html>
+
+
+
 
 
 
