--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <title>   
                 Bodycards
             </title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="Index.css">
     </head>
     <body>
     <div id="superior">    
