--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
       <div id="botons_sessio">    <!-- contenidor per als botons -->
         <button>Inicia sessió</button>
         <button>Nou usuari</button>
-      </div>         
+      </div>  
+	      <div id="botons_sessio">
+  <button onclick="inici_sessio()">Inicia sessió</button>
+  <button onclick="nou_usuari()">Nou usuari</button>
+</div>  
     </div>
 	  <div id="seccio_1" class="seccio">   
             TU POTS SER EL QUE VOLS
@@ -53,8 +57,16 @@
             <i id="boto_4" class="fa-solid fa-map"></i>    
             <i class="fa-solid fa-right-from-bracket"></i>    
         </div>
+	    <div id="menu">      
+  <i id="boto_1" class="fa-solid fa-house" onclick="canvia_seccio(1)"></i>     
+  <i id="boto_2" class="fa-solid fa-camera" onclick="canvia_seccio(2)"></i>
+  <i id="boto_3" class="fa-solid fa-image" onclick="canvia_seccio(3)"></i>
+  <i id="boto_4" class="fa-solid fa-map" onclick="canvia_seccio(4)"></i>
+  <i class="fa-solid fa-right-from-bracket" onclick="tanca_sessio()"></i>
+</div>
     </body>
 </html>
+
 
 
 
